# estate

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_BLUEPRINT.md  LICENSE  README.md  docker-compose.yml  nginx.conf  openapi.json
backend/: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  hello.py  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  encryption.py  graph.py  kokoro_tts.py  main.py  models.py  notice_log.py  ollama_verify.py  pdf_builder.py  practice_workflow.py  presidio.py  rate_limiter.py  solver.py  websocket_manager.py  whisper_stt.py
backend/app/services/: llm_provider.py  settings_service.py  smtp_service.py  storage.py
backend/app/tests/: fixtures.py  mock_kokoro.py  mock_llm.py  test_admin_settings_routes.py  test_admin_settings_test_connection.py  test_admin_setup.py  test_alembic.py  test_asset_deletion.py  test_asset_images.py  test_asset_revision.py  test_asset_router.py  test_audio_upload.py  test_auth.py  test_backup_restore_gate.py  test_database.py  test_dynamic_categories.py  test_e2e_compliance_validation.py  test_encryption.py  test_faq_api.py  test_gdpr_export.py  test_graph.py  test_hash_chain.py  test_heir_management.py  test_heir_profile.py  test_id_upload.py  test_id_verification.py  test_invite_scheduler.py  test_kokoro_tts.py  test_llm_provider.py  test_pdf_builder.py  test_pi5_profiling.py  test_postgres_saver.py  test_practice_workflow_unit.py  test_pre_allocation.py  test_presidio.py  test_rate_limiter.py  test_session_lifecycle.py  (+9 more)
backend/migrations/: env.py
specs/: specs.md  (+12 more)
(+124 files in other folders)
