[project]
name = "estate-agent-backend"
version = "0.1.0"
description = "The Estate Steward — grief-informed estate mediation platform backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "langgraph>=0.0.30",
    "presidio-analyzer>=2.2.353",
    "presidio-anonymizer>=2.2.353",
    "spacy>=3.7.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "pgvector>=0.2.5",
    "aiosmtplib>=3.0.0",
    "pillow>=10.2.0",
    "pillow-heif>=0.15.0",
    "google-cloud-storage>=2.15.0",
    "fairpyx>=0.0.9",
    "reportlab>=4.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    # "kokoro-onnx>=0.3.0",  # Linux-only (onnxruntime has no macOS wheel) — Docker build resolves this
    "httpx>=0.27.0",
    "langfuse>=2.33.0",
    "langtrace-python-sdk>=2.2.0",
    "alembic>=1.18.4",
    "ollama>=0.6.2",
    "soundfile>=0.14.0",
    "importlib-metadata>=9.0.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "slowapi>=0.1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["app/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
markers = [
    "ollama: tests that require a running Ollama server at localhost:11434",
]
